[workspace]
members = [
  "base",
  "consensus",
  "crypto",
  "ledger",
  "merkle",
  "network",
  "snark-keys",
  "protocol/bin-prot",
  "protocol/wire-type",
  "protocol/bin_prot_checker",
  "protocol/wire-type-derive",
  "protocol/test-fixtures",
  "protocol/test-serialization",
  "protocol/serialization-types",
  "protocol/versioned",
]
# This is still needed for virtual workspaces 
# per <https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details>
resolver = "2"
