[workspace]
members = [
  "base",
  "consensus",
  "crypto",
  "merkle",
  "network",
  "ledger",
  "proof-systems-shim",
  "protocol/bin-prot",
  "protocol/bin_prot_checker",
  "protocol/test-fixtures",
  "protocol/test-serialization",
  "protocol/serialization-types",
  "protocol/versioned",
  "sdk",
  "secrets",
]
# This is still needed for virtual workspaces 
# per <https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details>
resolver = "2"
