[workspace]
members = [
  "base",
  "consensus",
  "crypto",
  "merkle",
  "network",
  "ledger",
  "proof-systems-shim",
  "protocol/bin-prot",
  "protocol/bin_prot_checker",
  "protocol/test-fixtures",
  "protocol/test-serialization",
  "protocol/serialization-types",
  "protocol/serialization-types-macros",
  "protocol/versioned",
  "secrets",
]
# This is still needed for virtual workspaces 
# per <https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details>
resolver = "2"

[workspace.dependencies]
mina-consensus = { path = "consensus" }
mina-rs-base = { path = "base" }
versioned = { path = "protocol/versioned" }
mina-crypto = { path = "crypto" }
bin-prot = { path = "protocol/bin-prot" }
mina-serialization-types-macros = { path = "protocol/serialization-types-macros" }
mina-serialization-types = { path = "protocol/serialization-types" }
proof-systems = { path = "proof-systems-shim" }
mina-network = { path = "network" }
mina-merkle = { path = "merkle" }

futures = "0.3.21"
serde_json = { version = "1", features = ["unbounded_depth"] }
serde = { version = "1", features = ["derive"] }
libp2p = { version = "0.44", features = ["dns-tokio", "tcp-tokio"] }
tokio = { features = ["macros", "sync"], version = "1.18" }
wasm-bindgen = "0.2"
once_cell = "1"
anyhow = "1"
ark-ff = "0.3.0"
reqwest = { features = ["json"], version = "0.11.0" }
hex = "0.4"
wasm-bindgen-futures = "0.4"
num = "0.4"
clap = { features = ["derive"], version = "3.0" }
env_logger = "0.9.0"
time = {version = "0.3", features=["macros"]}
multihash = "0.16"
js-sys = "0.3"
lazy_static = "1"
smart-default = "0.6.0"
syn = { features = ["full"], version = "1.0" }
structopt = "0.3.21"
bs58 = { features = ["check"], version = "0.4" }
protobuf = { features = ["with-bytes"], version = "3" }
bitvec = "1"
argon2 = "0.4"
derive_more = "0.99"
o1-utils = { git = "https://github.com/o1-labs/proof-systems", rev = "86f75976859fe9131c6e1db81511ce4d3127d8fa" }
base64 = "0.13"
proc-macro2 = "1.0"
serde_stacker = "0.1"
quote = "1.0"
thiserror = "1"
cfg-if = "1"
log = "0.4"
async-trait = "0.1"
blake2 = "0.10"
sha2 = "0.10"
strum = { features = ["derive"], version = "0.24" }

mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "86f75976859fe9131c6e1db81511ce4d3127d8fa" }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", rev = "86f75976859fe9131c6e1db81511ce4d3127d8fa" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", rev = "86f75976859fe9131c6e1db81511ce4d3127d8fa" }
