[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-rs-base"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../protocol/bin-prot"}
mina-crypto = {path = "../crypto"}
mina-serialization-types = {path = "../protocol/serialization-types"}
versioned = {path = "../protocol/versioned"}

base64 = "0.13"
derive_deref = "1.1"
derive_more = "0.99"
hex = "0.4"
num = "0.4"
serde = {version = "1", features = ["derive"]}
thiserror = "1"
time = "0.3"

ark-ec = "0.3.0"
ark-ff = "0.3.0"
commitment_dlog = {git = "https://github.com/o1-labs/proof-systems", rev = "3516d433411d482b9b720c3ca0d3caec0359f0ac"}

[dev-dependencies]
test-fixtures = {path = "../protocol/test-fixtures"}

mina-curves = {git = "https://github.com/o1-labs/proof-systems", rev = "3516d433411d482b9b720c3ca0d3caec0359f0ac"}
oracle = {git = "https://github.com/o1-labs/proof-systems", rev = "3516d433411d482b9b720c3ca0d3caec0359f0ac"}

# This dependency is not used by the crate, but is a subdependency of commitment_dlog
# This features must be enable to build with WASM support
# It has no effect for normal builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}
