[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-rs-base"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../protocol/bin-prot"}
mina-crypto = {path = "../crypto"}
mina-merkle = {path = "../merkle"}
mina-serialization-types = {path = "../protocol/serialization-types"}
mina-serialization-types-macros = {path = "../protocol/serialization-types-macros"}
proof-systems = {path = "../proof-systems-shim"}
versioned = {path = "../protocol/versioned"}

ark-ec = "0.3.0"
ark-ff = "0.3.0"
base64 = "0.13"
blake2 = "0.10"
derive_more = "0.99"
hex = "0.4"
lockfree-object-pool = "0.1"
num = "0.4"
once_cell = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
smart-default = "0.6.0"
thiserror = "1"
time = "0.3"

# This dependency is not used by the crate, but is a subdependency of commitment_dlog
# This features must be enable to build with WASM support
# It has no effect for normal builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
test-fixtures = {path = "../protocol/test-fixtures"}

anyhow = "1"
