[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-rs-base"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { workspace = true }
mina-crypto = { workspace = true }
mina-serialization-types = { workspace = true }
mina-serialization-types-macros = { workspace = true }
proof-systems = { workspace=true }
versioned = { workspace=true }

anyhow = { workspace = true }
ark-ec = "0.3.0"
ark-ff = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

# This dependency is not used by the crate, but is a subdependency of commitment_dlog
# This features must be enable to build with WASM support
# It has no effect for normal builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
test-fixtures = { path = "../protocol/test-fixtures" }
