[package]
name = "bin-prot"
version = "0.1.0"
license = "Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
num = "0.4.0"
serde = { version = "1.0.125" }
serde_json = { version = "1.0.64" }
thiserror = "1.0.24"

[dev-dependencies]
difference = "2.0.0"
serde = { version = "1.0.125", features = ["derive"] }
