[package]
name = "bin_prot_checker"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
serde = "1.0.126"
structopt = "0.3.21"
serde-bin-prot = { git = "https://github.com/ChainSafe/serde-bin-prot", branch = "main" }

mina-crypto = { path = "../crypto" }
