[package]
name = "bin_prot_checker"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.21"
serde-bin-prot = { git = "https://github.com/ChainSafe/serde-bin-prot", branch = "main" }
