[package]
name = "blocktree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mina-rs-base = { version = "0.1.0", path = "../base" }
mina-crypto = { version = "0.1.0", path = "../crypto" }
indextree = "4.3.1"
trees = "0.4.2"
dashmap = "4.0.2"
thiserror = "1.0.29"
slotmap = "1.0.6"
once_cell = "1.8.0"

[dev-dependencies]
rand = "0.8.4"
