[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-consensus"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
mina-crypto = {version = "0.1.0", path = "../crypto"}
mina-rs-base = {version = "0.1.0", path = "../base"}

bs58 = {version = "0.4", features = ["check"]}
hex = "0.4"
lazy_static = "1"
thiserror = "1"

mina-signer = {git = "https://github.com/willemolding/proof-systems", rev = "c05889b53668b44bb8944737581a24399747fb78"}

[dev-dependencies]
base64 = "0.13"
time = {version = "0.3", features = ["macros"]}
wasm-bindgen-test = "0.3"


