[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-consensus"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
mina-crypto = {version = "0.1.0", path = "../crypto"}
mina-rs-base = {version = "0.1.0", path = "../base"}
proof-systems = {path = "../proof-systems-shim"}

bs58 = {version = "0.4", features = ["check"]}
hex = "0.4"
lazy_static = "1"
thiserror = "1"

[dev-dependencies]
mina-serialization-types = {path = "../protocol/serialization-types"}
serde_json = "1"
test-fixtures = {path = "../protocol/test-fixtures"}

anyhow = "1"
base64 = "0.13"
time = {version = "0.3", features = ["macros"]}
wasm-bindgen-test = "0.3"
