[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-consensus"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
mina-crypto = { version = "0.1.0", path = "../crypto" }
mina-rs-base = { workspace = true }
proof-systems = { workspace=true }

anyhow = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ark-ff = { workspace = true }
mina-serialization-types = { workspace = true }
num = { workspace = true }
serde_json = "1"
test-fixtures = { path = "../protocol/test-fixtures" }

anyhow = "1"
base64 = { workspace = true }
time = { workspace = true }
wasm-bindgen-test = "0.3"
