[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-crypto"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../protocol/bin-prot"}
mina-serialization-types = {path = "../protocol/serialization-types"}
proof-systems = {path = "../proof-systems-shim"}
versioned = {path = "../protocol/versioned"}

base64 = "0.13"
blake2 = "0.10"
bs58 = {version = "0.4", features = ["check"]}
derive_more = "0.99"
hex = "0.4"
num = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
