[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-crypto"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { workspace = true }
mina-serialization-types = { workspace = true }
proof-systems = { workspace=true }
versioned = { workspace=true }

anyhow = { workspace = true }
ark-ff = { workspace = true }
base64 = { workspace = true }
blake2 = "0.10"
bs58 = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
