[package]
name = "layout_parser"
version = "0.1.0"
edition = "2018"

[lib]
name = "layout_parser"

[[bin]]
name = "cli"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["unbounded_depth"] }
serde_stacker = "0.1.4"
structopt = "0.3.22"
