[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-ledger"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-crypto = {path = "../crypto"}
mina-rs-base = {path = "../base"}
bin-prot = {path = "../protocol/bin-prot"}

thiserror = "1"

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = "0.18.0"
