[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-ledger"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../protocol/bin-prot"}
mina-crypto = {path = "../crypto"}
mina-merkle = {path = "../merkle"}
mina-rs-base = {path = "../base"}
proof-systems = {path = "../proof-systems-shim"}

thiserror = "1"

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = "0.19.0"

[dev-dependencies]
mina-consensus = {path = "../consensus"}
proof-systems = {path = "../proof-systems-shim"}

anyhow = "1"
ark-ff = "0.3"
num = "0.4"
