[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-ledger"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { workspace = true }
mina-crypto = { workspace = true }
mina-merkle = { workspace=true }
mina-rs-base = { workspace = true }
proof-systems = { workspace=true }

thiserror = { workspace = true }

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = "0.19.0"

[dev-dependencies]
mina-consensus = { workspace = true }
proof-systems = { path = "../proof-systems-shim" }

anyhow = { workspace = true }
ark-ff = { workspace = true }
num = { workspace = true }
