[package]
name = "merkle-ledger"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
fp-core = "0.1.9"
sexp = "1.1.4"
yojson-rs = "0.1.2"
direction = { path = "../direction"}
anyhow = "1.0.43"
uuid = "0.8.2"
