[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-merkle"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proof-systems = {path = "../proof-systems-shim"}

ark-ff = "0.3"
lockfree-object-pool = "0.1"
once_cell = "1"
thiserror = "1"

[dev-dependencies]

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rocksdb = "0.18.0"
