[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-merkle"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proof-systems = {path = "../proof-systems-shim"}

anyhow = "1"
ark-ff = "0.3"
once_cell = "1"
serde = {version = "1", features = ["derive"]}
thiserror = "1"

[dev-dependencies]
num = "0.4"
serde_json = "1"

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rocksdb = "0.19.0"
