[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-merkle"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proof-systems = { workspace=true }

anyhow = { workspace = true }
ark-ff = { workspace = true }
once_cell = { workspace = true }
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
num = { workspace = true }
serde_json = "1"

# RocksDB cannot build with the wasm target
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rocksdb = "0.19.0"
