[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-network"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
mina-consensus = {path = "../consensus"}
mina-rs-base = {path = "../base"}
proof-systems = {path = "../proof-systems-shim"}

anyhow = "1"
async-trait = "0.1"
cfg-if = "1"
lazy_static = "1"
libp2p = {version = "0.44", features = ["dns-tokio", "tcp-tokio"]}
log = "0.4"
multihash = "0.16"
tokio = {version = "1.18", features = ["macros", "sync"]}

# To list all wasm targets, use command 'rustc --print target-list | grep wasm'
[target.'cfg(target_arch = "wasm32")'.dependencies]
mina-serialization-types = {path = "../protocol/serialization-types"}

getrandom = {version = "0.2", features = ["js"]}
js-sys = "0.3"
libp2p = {version = "0.44", features = ["wasm-bindgen", "wasm-ext-websocket"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
anyhow = "1"
tokio = {version = "1.18", features = ["macros", "rt", "sync"]}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
