[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-network"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
mina-consensus = { workspace = true }
mina-merkle = { workspace=true }
mina-rs-base = { workspace = true }
proof-systems = { workspace=true }

anyhow = { workspace = true }
async-trait = { workspace = true }
cfg-if = { workspace = true }
hashbrown = "0.12"
lazy_static = { workspace = true }
libp2p = { workspace=true }
log = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace=true }

# To list all wasm targets, use command 'rustc --print target-list | grep wasm'
[target.'cfg(target_arch = "wasm32")'.dependencies]
mina-serialization-types = { workspace = true }

getrandom = { version = "0.2", features = ["js"] }
js-sys = { workspace = true }
libp2p = { version = "0.44", features = ["wasm-bindgen", "wasm-ext-websocket"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.18", features = ["macros", "rt", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
