[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "proof-systems"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-curves = {git = "https://github.com/o1-labs/proof-systems", rev = "7c4e329207353efb9d893906d116e69ffd06b7ab"}
mina-hasher = {git = "https://github.com/o1-labs/proof-systems", rev = "7c4e329207353efb9d893906d116e69ffd06b7ab"}
mina-signer = {git = "https://github.com/o1-labs/proof-systems", rev = "7c4e329207353efb9d893906d116e69ffd06b7ab"}
o1-utils = {git = "https://github.com/o1-labs/proof-systems", rev = "7c4e329207353efb9d893906d116e69ffd06b7ab"}

anyhow = "1"
ark-ff = "0.3"
bitvec = "1"
derive_more = "0.99"
num = "0.4"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
serde_json = "1"
