[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "proof-systems"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-curves = { workspace=true }
mina-hasher = { workspace=true }
mina-signer = { workspace=true }
o1-utils = { workspace=true }

anyhow = {workspace=true}
ark-ff =  {workspace=true}
bitvec = {workspace=true}
derive_more = {workspace=true}
num = {workspace=true}
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
