[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-secrets"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-crypto = {path = "../crypto"}

bs58 = {version = "0.4", features = ["check"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

[dev-dependencies]
hex = "0.4"

[lib]
