[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-secrets"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
proof-systems = {path = "../proof-systems-shim"}

argon2 = "0.4"
bs58 = {version = "0.4", features = ["check"]}
hex = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
xsalsa20poly1305 = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["js"]}

[dev-dependencies]
mina-serialization-types = {path = "../protocol/serialization-types"}

anyhow = "1"
wasm-bindgen-test = "0.3"

[lib]
