[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-secrets"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dependencies]
proof-systems = { workspace = true }

argon2 = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
xsalsa20poly1305 = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
anyhow = "1"
wasm-bindgen-test = "0.3"

[lib]
