[package]
name = "serde-versions-derive"
version = "0.0.5"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An attribute macro for adding a version byte when serializing a struct via Serde. Also allows deseraializing while removing version byte."

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
