[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "snark-keys"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
wire-type = { path = "../protocol/wire-type" }
mina-rs-base = { path = "../base" }
bin-prot = { path = "../protocol/bin-prot" }

serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

[dev-dependencies]
lazy_static = "1.4.0"
