[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "snark-keys"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
mina-rs-base = { path = "../base" }
bin-prot = { path = "../protocol/bin-prot" }

serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

[dev-dependencies]
test-fixtures = { path = "../protocol/test-fixtures" }
