[package]
name = "test-serialization"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
bin-prot = { path = "../bin-prot" }
mina-rs-base = { path = "../base"}
mina-crypto = { path = "../crypto"}
test-fixtures = { path = "../test-fixtures"}

serde = { version = "1", features = ["derive"] }
pretty_assertions = "1"
