[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "bin-prot-layout-reader"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { path = "../../protocol/bin-prot", features = [
    "loose_deserialization",
] }

anyhow = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
serde_stacker = { workspace = true }
structopt = { workspace = true }
