[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mina"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.45"
structopt = "0.3.25"
thiserror = "1.0.30"

[features]
mainnet = []
devnet = []
testnet = []
