[package]
name = "mina-rs-wasm-mvp"
version = "0.1.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[features]
default = [
  "wasm",
]

wasm = [
  "libp2p/wasm-bindgen",
  "libp2p/wasm-ext-websocket",
]

[dependencies]
# libp2p = {path = "../../../rust-libp2p"}
# libp2p-mplex = {path = "../../../rust-libp2p/muxers/mplex"}
# libp2p-relay = {path = "../../../rust-libp2p/protocols/relay"}

libp2p = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}
libp2p-mplex = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}
libp2p-relay = {git = "https://github.com/libp2p/rust-libp2p", rev = "243f587eed9a2ce5f7b057506e51e2ad956bbc4c"}

anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
env_logger = "0.9"
hex = "0.4"
js-sys = "0.3"
multihash = "0.16"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 's'
