[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-rs-profilers"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin-prot = {path = "../../protocol/bin-prot"}
mina-crypto = {path = "../../crypto"}
mina-rs-base = {path = "../../base"}

anyhow = "1"
clap = "2"
dhat = "0.2"
serde = {version = "1", features = ["derive"]}

[profile.release]
debug = true
