[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-rs-profilers"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { workspace = true }
mina-rs-base = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
dhat = "0.3"
serde = { version = "1", features = ["derive"] }

[profile.release]
debug = true
