[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "bin-prot"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[features]
default = []

loose_deserialization = ["serde_json"]

[dependencies]
byteorder = "1.4"
num = "0.4"
serde_json = { workspace = true, optional = true}
serde = { workspace = true }
thiserror = "1"
