[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-serialization-types-macros"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}

[dev-dependencies]
versioned = {path = "../versioned"}

derive_more = "0.99"

[lib]
proc-macro = true
