[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-serialization-types-macros"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
proc-macro2 = {workspace=true}
quote = {workspace=true}
syn = {workspace=true}

[dev-dependencies]
versioned = { workspace=true }

derive_more = {workspace=true}

[lib]
proc-macro = true
