[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-serialization-types"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../bin-prot"}
mina-serialization-types-macros = {path = "../serialization-types-macros"}
proof-systems = {path = "../../proof-systems-shim"}
versioned = {path = "../versioned"}

bs58 = {version = "0.4", features = ["check"]}
derive_more = "0.99"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"

[dev-dependencies]
test-fixtures = {path = "../test-fixtures"}

pretty_assertions = "1"
wasm-bindgen-test = "0.3"
