[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-serialization-types"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = {path = "../bin-prot"}
mina-serialization-types-macros = {path = "../serialization-types-macros"}
proof-systems = {path = "../../proof-systems-shim"}
versioned = {path = "../versioned"}

ark-serialize = "0.3"
base64 = "0.13"
bs58 = {version = "0.4", features = ["check"]}
derive_more = "0.99"
hex = "0.4"
num = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
smart-default = "0.6.0"
thiserror = "1"

[dev-dependencies]
test-fixtures = {path = "../test-fixtures"}

anyhow = "1"
pretty_assertions = "1"
wasm-bindgen-test = "0.3"
