[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "mina-serialization-types"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"

[dependencies]
bin-prot = { workspace = true }
mina-serialization-types-macros = { workspace = true }
proof-systems = { workspace = true }
versioned = { workspace=true }

base64 = { workspace = true }
bs58 = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
smart-default = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-fixtures = { path = "../test-fixtures" }

anyhow = "1"
pretty_assertions = "1"
wasm-bindgen-test = "0.3"
