[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "test-fixtures"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# layout support should only be used in tests
bin-prot = { path = "../bin-prot", features = ["loose_deserialization"] }
mina-serialization-types = { workspace = true }


anyhow = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
serde_stacker = { workspace = true }

[lib]
# Data files might grow very large, 
# Allow dynamic linking to save build time during development
# by setting RUSTFLAGS="-C prefer-dynamic".
# Keeping only dylib here will cause errors when running `cargo test` from root, see https://github.com/rust-lang/cargo/issues/7226
crate-type = ["dylib", "lib"]
